@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.oracle.oci.sdk</groupId>
     <artifactId>oci-java-sdk</artifactId>
-    <version>3.62.0</version>
+    <version>3.62.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>oci-java-sdk-circuitbreaker</artifactId>
@@ -13,7 +13,11 @@
   <description>This project contains the Circuit Breaker module used for Oracle Cloud Infrastructure
     SDKs</description>
   <url>https://docs.oracle.com/iaas/Content/API/SDKDocs/javasdk.htm</url>
-
+  <properties>
+    <maven-surefire-plugin.argLine>--illegal-access=warn
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+    </maven-surefire-plugin.argLine>
+  </properties>
 
   <build>
     <plugins>
