@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.oracle.oci.sdk</groupId>
     <artifactId>oci-java-sdk</artifactId>
-    <version>3.62.0</version>
+    <version>3.62.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -14,7 +14,32 @@
   <url>https://docs.oracle.com/iaas/Content/API/SDKDocs/javasdk.htm</url>
   <properties>
     <jetty.version>9.4.56.v20240826</jetty.version>
+    <maven-surefire-plugin.argLine>--illegal-access=warn
+      --add-opens=java.base/java.io=ALL-UNNAMED
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens=java.base/java.net=ALL-UNNAMED
+      --add-opens=java.base/java.nio.channels=ALL-UNNAMED
+      --add-opens=java.base/java.text=ALL-UNNAMED
+      --add-opens=java.base/java.security=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+      --add-opens=java.base/java.util.regex=ALL-UNNAMED
+      --add-opens=java.base/java.util.stream=ALL-UNNAMED
+      --add-opens=java.base/java.time=ALL-UNNAMED
+    </maven-surefire-plugin.argLine>
   </properties>
+  <profiles>
+    <profile>
+      <id>jdk-8-only</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+      <properties>
+        <maven-surefire-plugin.argLine></maven-surefire-plugin.argLine>
+      </properties>
+    </profile>
+  </profiles>
   <build>
     <!-- Substitutes maven properties into the SDK properties -->
     <resources>
@@ -62,12 +87,12 @@
     <dependency>
       <groupId>com.oracle.oci.sdk</groupId>
       <artifactId>oci-java-sdk-circuitbreaker</artifactId>
-      <version>3.62.0</version>
+      <version>3.62.1</version>
     </dependency>
     <dependency>
       <groupId>com.oracle.oci.sdk</groupId>
       <artifactId>oci-java-sdk-common-httpclient</artifactId>
-      <version>3.62.0</version>
+      <version>3.62.1</version>
     </dependency>
     <!-- Test dependencies -->
     <dependency>
@@ -112,7 +137,7 @@
     <dependency>
       <groupId>com.oracle.oci.sdk</groupId>
       <artifactId>oci-java-sdk-common-httpclient-jersey</artifactId>
-      <version>3.62.0</version>
+      <version>3.62.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
